--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
       </div>
     </div>
     <div class="column">
-      <img src="./static/images/IntroPaper.jpg">
+      <img src="./static/images/IntroPaper.jpg" style="max-width: 300px; height: 300px;"> 
       <p class="subtitle has-text-centered">
         Example of the proposed algorithm for learning movement primitives using Gaussian Processes with subsequent adaptation through Pathwise 
         Conditioning. With a single demonstration, movement primitives are learned via our LfD method and adapted in real time to new via-points using 
@@ -592,7 +592,7 @@
             (vs) and the entry vector of the U-Shape (vo). 
             The closer this value is to 1, the more optimal the alignment. 
             <br>
-            <em>Goal Cosine Similarity</em> (cos(θg )) establishes the same criterion as the Start Cosine Similarity 
+            <em>Goal Cosine Similarity</em> (cos(θg)) establishes the same criterion as the Start Cosine Similarity 
             but for the trajectory’s arrival. For this, we obtain the vector (vg) and compare it with the exit vector of the U-Shape (ve). 
             The closer this value is to 1, the more optimal the alignment.
             <br>
