--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
         </div>
       </div>
     </div>
-    <div class="column">
-      <img src="./static/images/IntroPaper.jpg" style="max-width: 300px; height: 300px;"> 
+    <div class="column has-text-centered">
+      <img src="./static/images/IntroPaper.jpg" style="max-width: 50%; height: auto;"> 
       <p class="subtitle has-text-centered">
         Example of the proposed algorithm for learning movement primitives using Gaussian Processes with subsequent adaptation through Pathwise 
         Conditioning. With a single demonstration, movement primitives are learned via our LfD method and adapted in real time to new via-points using 
