--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
       </div>
     </div>
     <div class="column has-text-centered">
-      <img src="./static/images/IntroPaper.jpg" style="max-width: 50%; height: auto;"> 
-      <p class="subtitle has-text-centered">
+      <img src="./static/images/Tablas.png" style="max-width: 50%; height: auto;"> 
+      <p class="subtitle is-4 has-text-centered">
         Example of the proposed algorithm for learning movement primitives using Gaussian Processes with subsequent adaptation through Pathwise 
         Conditioning. With a single demonstration, movement primitives are learned via our LfD method and adapted in real time to new via-points using 
         Pathwise Conditioning, which avoids re-learning the task or inverting covariance matrices, making it an efficient and fast method.
