--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
       </div>
     </div>
     <div class="column has-text-centered">
-      <img src="./static/images/Tablas.png" style="max-width: 50%; height: auto;"> 
-      <p class="subtitle is-4 has-text-centered">
+      <img src="./static/images/IntroPaper.jpg" style="max-width: 50%; height: auto;"> 
+      <p class="subtitle has-text-centered">
         Example of the proposed algorithm for learning movement primitives using Gaussian Processes with subsequent adaptation through Pathwise 
         Conditioning. With a single demonstration, movement primitives are learned via our LfD method and adapted in real time to new via-points using 
         Pathwise Conditioning, which avoids re-learning the task or inverting covariance matrices, making it an efficient and fast method.
@@ -606,8 +606,9 @@
     </div>
     <div class="container is-max-desktop">
       <div class="hero body">
-        <img src="./static/images/ExpComparison4.jpg" alt="GPs solutions">
-        <p class="subtitle has-text-centered">
+        <img src="./static/images/Tablas.png" alt="GPs solutions">
+        <p class="subtitle is-1 has-text-centered">
+          Quantitative comparison of methods: Start Cosine, End Cosine, Endpoint Distance, and average time (four scenarios)
         </p>
       </div>
     </div>
