--- a/index.html
+++ b/index.html
@@ -639,16 +639,11 @@
 
 <section class="section">
   <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
+    <div class="columns is-centered">
       <div class="column">
         <h2 class="title is-5">Experiment 1: bottle pick and place</h2>
-        <div class="content has-text-justified">
-          <p>
-          </p>
-        </div>
       </div>
     </div>
-    
 
   <div class="container">
     <div class="columns is-centered">
