--- a/index.html
+++ b/index.html
@@ -639,11 +639,12 @@
 
 <section class="section">
   <div class="container is-max-desktop">
-    <div class="columns is-centered">
+    <div class="columns is-centered has-text-centered">
       <div class="column">
-        <h2 class="title is-5">Experiment 1: bottle pick and place</h2>
+        <h2 class="title is-5 mb-0">Experiment 1: bottle pick and place</h2>
       </div>
     </div>
+    
 
   <div class="container">
     <div class="columns is-centered">
