--- a/index.html
+++ b/index.html
@@ -642,9 +642,15 @@
     <div class="columns is-centered has-text-centered">
       <div class="column">
         <h2 class="title is-5 mb-0">Experiment 1: bottle pick and place</h2>
+        <div class="content has-text-justified">
+          <p>
+            The robot has to put the bottle over the box, and the human can move both the bottle and the box to new positions and orientations.
+          </p>
+        </div>
       </div>
     </div>
     
+    <div class="columns is-centered">
       <div class="column is-half">
         <figure class="image is-16by9">
           <video controls>
@@ -665,6 +671,8 @@
         </figure>
         <p class="subtitle is-6 has-text-centered">Here is an example of how the method correct the learned policy in real time while the human moves the relevant objects</p>
       </div>
+
+    </div>
   </div>
 
 </section>
