--- a/index.html
+++ b/index.html
@@ -649,8 +649,8 @@
         </div>
       </div>
     </div>
-    
-    <div class="columns is-centered">
+    <div class="container is-max-desktop">
+    <div class="columns has-text-centered">
       <div class="column is-half">
         <figure class="image is-16by9">
           <video controls>
@@ -661,7 +661,6 @@
         <p class="subtitle is-6 has-text-centered">A single demonstration of how the robot has to pick and place the milk carton</p>
       </div>
 
-      
       <div class="column is-half">
         <figure class="image is-16by9">
           <video controls>
@@ -673,6 +672,7 @@
       </div>
 
     </div>
+  </div>
   </div>
 
 </section>
