--- a/index.html
+++ b/index.html
@@ -639,48 +639,40 @@
 
 <section class="section">
   <div class="container is-max-desktop">
-    <div class="columns">
+    <!-- título + descripción -->
+    <div class="columns is-centered">
       <div class="column">
         <h2 class="title is-5" style="margin-bottom: 0.25rem;">Experiment 1: bottle pick and place</h2>
-        <p style="margin-top: 0.25rem; margin-bottom: 0.5rem;">
+        <p class="content" style="margin-top: 0.25rem; margin-bottom: 0.5rem;">
           The robot has to put the bottle over the box, and the human can move both the bottle and the box to new positions and orientations.
         </p>
       </div>
     </div>
 
-    <div class="columns is-variable is-1"> <!-- is-1 reduce un poco el gap horizontal -->
+    <!-- vídeos en una sola fila -->
+    <div class="columns is-multiline" style="margin-top: 0;">
       <div class="column is-half">
-        <div class="card" style="box-shadow: none; border: none;">
-          <div class="card-image" style="padding: 0;">
-            <figure class="image is-16by9" style="margin: 0;">
-              <video controls style="display:block; width:100%; height:100%;">
-                <source src="./static/videos/DemosLeche.mp4" type="video/mp4">
-              </video>
-            </figure>
-          </div>
-          <div class="card-content" style="padding-top: 0.5rem;">
-            <p class="subtitle is-6 has-text-centered" style="margin: 0;">
-              A single demonstration of how the robot has to pick and place the milk carton
-            </p>
-          </div>
-        </div>
+        <figure class="image is-16by9" style="margin-bottom: 0;">
+          <video controls style="display:block; width:100%; height:100%;">
+            <source src="./static/videos/DemosLeche.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </figure>
+        <p class="subtitle is-6 has-text-centered" style="margin-top: 0.5rem; margin-bottom: 0;">
+          A single demonstration of how the robot has to pick and place the milk carton
+        </p>
       </div>
 
       <div class="column is-half">
-        <div class="card" style="box-shadow: none; border: none;">
-          <div class="card-image" style="padding: 0;">
-            <figure class="image is-16by9" style="margin: 0;">
-              <video controls style="display:block; width:100%; height:100%;">
-                <source src="./static/videos/PickAndPlace_leche.mp4" type="video/mp4">
-              </video>
-            </figure>
-          </div>
-          <div class="card-content" style="padding-top: 0.5rem;">
-            <p class="subtitle is-6 has-text-centered" style="margin: 0;">
-              Here is an example of how the method correct the learned policy in real time...
-            </p>
-          </div>
-        </div>
+        <figure class="image is-16by9" style="margin-bottom: 0;">
+          <video controls style="display:block; width:100%; height:100%;">
+            <source src="./static/videos/PickAndPlace_leche.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </figure>
+        <p class="subtitle is-6 has-text-centered" style="margin-top: 0.5rem; margin-bottom: 0;">
+          Here is an example of how the method correct the learned policy in real time while the human moves the relevant objects
+        </p>
       </div>
     </div>
   </div>
