--- a/index.html
+++ b/index.html
@@ -647,7 +647,7 @@
     <div class="container is-max-desktop">
     <div class="columns has-text-centered">
       <div class="column is-half">
-        <figure class="image is-16by9">
+        <figure class="image">
           <video controls>
             <source src="./static/videos/DemosLeche.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -657,7 +657,7 @@
       </div>
 
       <div class="column is-half">
-        <figure class="image is-16by9">
+        <figure class="image">
           <video controls>
             <source src="./static/videos/PickAndPlace_leche.mp4" type="video/mp4">
             Your browser does not support the video tag.
