--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
       </div>
     </div>
 </section>
-
+<!-- Video pick and place -->
 <section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
@@ -664,6 +664,42 @@
           </video>
         </figure>
         <p class="subtitle is-6 has-text-centered">Here is an example of how the method correct the learned policy in real time while the human moves the relevant objects</p>
+      </div>
+
+    </div>
+  </div>
+  </div>
+
+</section>
+<!-- Video pouring water -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column">
+        <h2 class="title is-5 mb-0">Experiment 1: bottle pick and place</h2>
+      </div>
+    </div>
+    <div class="container is-max-desktop">
+    <div class="columns has-text-centered">
+      <div class="column is-half">
+        <figure class="image">
+          <video controls>
+            <source src="./static/videos/DemosServirPapel.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </figure>
+        <p class="subtitle is-6 has-text-centered">A single demonstration of how the robot has to pour the water (pink paper balls)</p>
+      </div>
+
+      <div class="column is-half">
+        <figure class="image">
+          <video controls>
+            <source src="./static/videos/BolasPapel_vaso.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </figure>
+        <p class="subtitle is-6 has-text-centered">Here is an example of how the method correct the learned policy when the human moves 
+          the bowl and also position the arm in new initial configurations</p>
       </div>
 
     </div>
