--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column">
-        <h2 class="title is-5 mb-0">Experiment 1: bottle pick and place</h2>
+        <h2 class="title is-5 mb-0">Experiment 2: serving simulation</h2>
       </div>
     </div>
     <div class="container is-max-desktop">
