kk values included

--- a/index.html
+++ b/index.html
@@ -621,7 +621,7 @@
 
 
 <!-- Real world experiements -->
-<section class="section">
+<section class="sectionkk">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column">
@@ -637,7 +637,7 @@
     </div>
 </section>
 <!-- Video pick and place -->
-<section class="section">
+<section class="sectionkk">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column">
@@ -672,7 +672,7 @@
 
 </section>
 <!-- Video pouring water -->
-<section class="section">
+<section class="sectionkk">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column">
@@ -699,7 +699,7 @@
           </video>
         </figure>
         <p class="subtitle is-6 has-text-centered">Here is an example of how the method correct the learned policy when the human moves 
-          the bowl and also position the arm in new initial configurations</p>
+          the bowl and also move the arm in new initial configurations</p>
       </div>
 
     </div>
