--- a/index.html
+++ b/index.html
@@ -708,6 +708,106 @@
 
 </section>
 
+</section>
+<!-- Video Libro -->
+<section class="sectionkk">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column">
+        <h2 class="title is-5 mb-0">Experiment 3: repositioning a book on a shelf</h2>
+      </div>
+    </div>
+    <div class="container is-max-desktop">
+    <div class="columns has-text-centered">
+      <div class="column is-half">
+        <figure class="image">
+          <video controls>
+            <source src="./static/videos/DemosColocarLibro.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </figure>
+        <p class="subtitle is-6 has-text-centered">A single demonstration about how the robot should place the book on the shelf </p>
+      </div>
+
+      <div class="column is-half">
+        <figure class="image">
+          <video controls>
+            <source src="./static/videos/LibroColocar_estanteria.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </figure>
+        <p class="subtitle is-6 has-text-centered">Here is an example of how the method correct the learned policy when the human moves 
+          the shelf changing the position and orientation during execution</p>
+      </div>
+
+    </div>
+  </div>
+  </div>
+
+</section>
+
+</section>
+<!-- Videos Meter caja -->
+<section class="sectionkk">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column">
+        <h2 class="title is-5 mb-0">Experiment 4: placing objects inside a box</h2>
+      </div>
+    </div>
+    <div class="container is-max-desktop">
+    <div class="columns has-text-centered">
+      <div class="column is-one-quarter">
+        <figure class="image">
+          <video controls>
+            <source src="./static/videos/DemosMeterCaja.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </figure>
+        <p class="subtitle is-6 has-text-centered">A single demonstration about how the robot should place one object inside the box </p>
+      </div>
+
+      <div class="column is-one-quarter">
+        <figure class="image">
+          <video controls>
+            <source src="./static/videos/MeterCaja1_normal.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </figure>
+        <p class="subtitle is-6 has-text-centered">Here is an example of how the method adapt the policy to a new solution with 2 different object 
+          (first has to take the Rubik cube and then the toy)</p>
+      </div>
+
+      <div class="column is-one-quarter">
+        <figure class="image">
+          <video controls>
+            <source src="./static/videos/MeterCaja2_newObject.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </figure>
+        <p class="subtitle is-6 has-text-centered">Here is an example of how the method adapt the policy whe, during execution, the human put a new object 
+          (first has to take the Rubik cube and then the toy)
+        </p>
+      </div>
+
+      <div class="column is-one-quarter">
+        <figure class="image">
+          <video controls>
+            <source src="./static/videos/MeterCaja3_cajamover.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </figure>
+        <p class="subtitle is-6 has-text-centered">Here is an example of how the method adapt the policy when, during execution, the human 
+          interrupts and move the box to a new place
+        </p>
+      </div>
+
+    </div>
+  </div>
+  </div>
+
+</section>
+
 
 <footer class="footer">
   <div class="container">
