Full video added

--- a/index.html
+++ b/index.html
@@ -185,6 +185,16 @@
       to enforce new via-points without retraining, locally preserving the learned primitive and its predictive uncertainty.
     </h2>
   </div>
+  <<div class="container is-max-desktop">
+    <div class="hero body">
+      <video id="teaser" autoplay="autoplay" controls autoplay muted loop playsinline height="100%">
+        <source src="./static/videos/FullVideoCorrected.mp4" type="video/mp4">
+      </video>
+      <p class="subtitle has-text-centered">
+        Full demo video of the method in simulated and real robot experiments.
+      </p>
+    </div>
+  </div>>
 </section>
 
 
