--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
             More Research
           </a>
           <div class="navbar-dropdown">
-            <a class="navbar-item" href="" target="_blank">
-              Future examples will be added
+            <a class="navbar-item" href="https://ieeexplore.ieee.org/abstract/document/11246414" target="_blank">
+              Coordination of Learned Decoupled Dual-Arm Tasks through Gaussian Belief Propagation
             </a>
-            <a class="navbar-item" href="" target="_blank">
-              Future examples will be added
+            <a class="navbar-item" href="https://advanced.onlinelibrary.wiley.com/doi/full/10.1002/aisy.202500607" target="_blank">
+              Elastic Fast Marching Learning from Demonstration
             </a>
           </div>
         </div>
@@ -84,19 +84,19 @@
           <div class="is-size-5 publication-authors">
 
             <span class="author-block">
-              <a href="" target="_blank"> First Author,</a>
+              <a href="https://scholar.google.es/citations?user=A7JOZNQAAAAJ&hl=es" target="_blank"> Adrian Prados,</a>
             </span>
 
             <span class="author-block">
-              <a href="" target="_blank"> Second Author,</a>
+              <a href="https://scholar.google.es/citations?user=iOFuxMIAAAAJ&hl=es" target="_blank"> Gonzalo Espinoza,</a>
             </span>
 
             <span class="author-block">
-              <a href="" target="_blank"> Third Author,</a>
+              <a href="https://scholar.google.es/citations?user=31Qh_d4AAAAJ&hl=es" target="_blank"> Alberto Mendez,</a>
             </span>
 
             <span class="author-block">
-              <a href="" target="_blank"> Fourth Author,</a>
+              <a href="https://scholar.google.es/citations?user=zVLybhsAAAAJ&hl=es" target="_blank"> Ramon Barber</a>
             </span>
 
             <!--span class="author-block">
@@ -105,7 +105,7 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <a class="author-block" href="" target="_blank">Research Group for all of the publication-authors</a>
+            <a class="author-block" href="https://mobile-robots-group-uc3m.github.io/MobileRobotsDocumentation/" target="_blank">Mobile Robots Group, RoboticsLab, University Carlos III</a>
           </div>
 
           <!--div class="is-size-5 publication-authors">
@@ -136,7 +136,7 @@
 
               <!-- Video Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://youtu.be/TWVs3DqLf6g"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
@@ -147,7 +147,7 @@
 
               <!-- Code Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://github.com/AdrianPrados/GaussianPathwiseLfD"
                    class="external-link button is-normal is-rounded is-dark" target="_blank">
                   <span class="icon">
                       <i class="fab fa-github"></i>
